<resources>
    <string name="app_name">MyHttp</string>

    <string name="open_drawer_content_desc">Open Drawer</string>
    <string name="close_drawer_content_desc">Open Drawer</string>

    <string name="main_navigation_menu_nav_post_get">Post/Get</string>
    <string name="main_navigation_menu_nav_about">关于</string>

    <string name="post_get_fragment_navigation_menu_nav_request">请求</string>
    <string name="post_get_fragment_navigation_menu_nav_log">日志</string>

    <string name="fragment_request_request_url_hint">URL 长按右边按钮可选择编码</string>
    <string name="fragment_request_is_get_request">GET</string>
    <string name="fragment_request_is_post_request">POST</string>
    <string name="fragment_request_submit_parameter_hint">FORM:param1=value1&amp;param2=value2</string>
    <string name="fragment_request_cookie_prompt">Cookie</string>
    <string name="fragment_request_request_button">请求</string>
    <string name="fragment_request_result_prompt">响应结果</string>
    <string name="fragment_request_result_hint">响应结果</string>
    <string name="fragment_request_response_headers">响应标头</string>
    <string name="fragment_request_request_head">请求标头</string>
    <string name="fragment_request_request_head_hint">key1=value1;key2=value2;…</string>

    <string name="fragment_about_submit_feedback">提交反馈</string>
    <string name="fragment_about_personal_website">个人网站</string>
    <string name="fragment_about_open_source_license">开源许可</string>
    <string name="fragment_about_code_warehouse">代码仓库</string>

</resources>